UY-1346 Fix button text alignment after migration to Vaadin 24 QA

--- a/vaadin-styles/src/main/resources/styles.css
+++ b/vaadin-styles/src/main/resources/styles.css
@@ -281,6 +281,10 @@ vaadin-grid[navigating]::part(focused-cell last-column-cell):focus::before {
     box-shadow: unset;
 }
 
+vaadin-button.u-text-left::part(prefix) {
+    margin-right: var(--unity-small-margin);
+}
+
 vaadin-button.u-text-left::part(label) {
     padding-right: 80%;
     text-overflow: clip;
